--- a/public/style.css
+++ b/public/style.css
@@ -1,8 +1,7 @@
 input[type='submit'] {
     display:block;
-    margin: 0 auto;
-    margin-top: 20px;
-    padding: 10px 20px;
+    margin: 10px auto;
+    padding: 4px 8px;
     background-color: #4CAF50;
     color: white;
     border: none;
